--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
+* {
+  font-size: 24px;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin: auto;
   display: flex;
+  /* justify-content: center; */
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+  display: flex;
+  justify-content: space-around;
+  width: 450px;
+  margin: 200px 0 20px 0 ;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form input {
+  border: none;
+  flex: 1;
+  border: 1px solid #E5E5E5;
+  border-radius: 3px;
+  padding-left: 15px;
 }
+
+.form button {
+  background-color: #634BF5;
+  /* color: white; */
+  font-size: 24px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+output {
+  width: 450px;
+}
+
+/* .is-error {
+  
+
+} */
+
+.is-error:focus {
+  box-shadow: 0 0 10px 2px rgb(249, 2, 2);
+ }
